--- a/index.html
+++ b/index.html
@@ -2523,7 +2523,7 @@
                     </div>
                 </li>
                 <li class="navbar-item dropdown">
-                    <a href="#Career Options" class="navbar-link dropdown-toggle">Career Options</a>
+                    <a href="#Career Options" class="navbar-link dropdown-toggle">Carrer Cards</a>
                     <div class="dropdown-menu">
                         <a href="https://dsel.education.gov.in/careers/index.html" class="dropdown-item">Career Guidance Portal</a>
                         <a href="https://www.lpu.in/blog/top-career-options-after-12th-arts/" class="dropdown-item">After 12th in Arts</a>
@@ -2873,7 +2873,7 @@
                 <button class="tab-btn" data-tab="digital" aria-pressed="false">Digital Resources</button>
                 <button class="tab-btn" data-tab="study-materials" aria-pressed="false">Study Materials</button>
                 <button class="tab-btn" data-tab="digital-libraries" aria-pressed="false">Digital Libraries</button>
-                <button class="tab-btn" data-tab="educational-portals" aria-pressed="false">Educational Portals</button>
+                <button class="tab-btn" data-tab="educational-portals" aria-pressed="false" style="background-color: rgb(97, 209, 175);">DIGITAL LIBRARY PORTAL</button>
                 <button class="tab-btn" data-tab="ncf-splitup" aria-pressed="false">NCF & Split Up</button>
             </div>
             <div class="tab-content active" id="books" aria-hidden="false">
