--- a/index.html
+++ b/index.html
@@ -744,12 +744,12 @@
             font-size: 0.8rem;
             color: var(--hindi-color); /* Matching the theme color */
             font-weight: 500;
-            margin-top: auto; /* Push date to bottom */
+            margin-top: 45 px; /* Push date to bottom */
         }
 
         /* Hindi Pustak Pradarshini Section - New */
         .hindi-pustak-pradarshini {
-            padding: 4rem 0;
+            padding: 14 px 0;
             background: linear-gradient(135deg, #fff5eb, #ffe8d6);
             position: relative;
             overflow: hidden;
@@ -822,12 +822,12 @@
         .hindi-pustak-pradarshini-grid {
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-            gap: 30px;
+            gap: 40px;
         }
 
         .hindi-pustak-pradarshini-item {
             position: relative;
-            border-radius: 15px;
+            border-radius: 25px;
             overflow: hidden;
             box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
             transition: all 0.4s ease;
@@ -880,7 +880,6 @@
             padding: 20px;
             background-color: white;
             height: 35%;
-            display: flex;
             flex-direction: column;
             justify-content: center;
             overflow: hidden;
@@ -2746,6 +2745,7 @@
             </div>
         </div>
     </section>
+    <hr>
 
     <!-- Hindi Pakwada Event Gallery Section -->
     <section class="hindi-pakwada-gallery" id="hindi-pakwada-gallery">
@@ -2761,8 +2761,8 @@
                         <img src="Hindi Pakhwada\Hindi Pakhwada(2).jpeg" alt="Cultural Performance">
                     </div>
                     <div class="hindi-pakwada-details">
-                        <h3>Investiture Ceremony</h3>
-                        <p>Special investiture ceremony marking the beginning of Hindi Pakwada celebrations in our school.</p>
+                        <h3>Essay Writing</h3>
+                        <p>biography</p>
                     </div>
                 </div>
             </div>
